--- a/CardMatchingGame/Base.lproj/Main.storyboard
+++ b/CardMatchingGame/Base.lproj/Main.storyboard
@@ -1,24 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CardMatchingGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Ojx-OL-0WA">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9GC-SV-LdO">
+                                <rect key="frame" x="44" y="0.0" width="808" height="393"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hy3-UP-PGZ">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QBH-fa-hL4">
+                                        <rect key="frame" x="0.0" y="0.0" width="154" height="224"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="V4q-ER-Lkt">
+                                            <rect key="frame" x="0.0" y="0.0" width="154" height="224"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card1" translatesAutoresizingMaskIntoConstraints="NO" id="Qba-W0-YdQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="154" height="224"/>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="uNE-lT-DcO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="154" height="224"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="uNE-lT-DcO" secondAttribute="bottom" id="2dG-g3-9n6"/>
+                                                <constraint firstItem="uNE-lT-DcO" firstAttribute="top" secondItem="V4q-ER-Lkt" secondAttribute="top" id="Aa3-el-rdF"/>
+                                                <constraint firstItem="uNE-lT-DcO" firstAttribute="leading" secondItem="V4q-ER-Lkt" secondAttribute="leading" id="WJS-qH-D1i"/>
+                                                <constraint firstAttribute="bottom" secondItem="Qba-W0-YdQ" secondAttribute="bottom" id="fMN-LW-ZQA"/>
+                                                <constraint firstAttribute="trailing" secondItem="Qba-W0-YdQ" secondAttribute="trailing" id="jay-ZF-bI2"/>
+                                                <constraint firstItem="Qba-W0-YdQ" firstAttribute="leading" secondItem="V4q-ER-Lkt" secondAttribute="leading" id="l3q-pG-sMa"/>
+                                                <constraint firstItem="Qba-W0-YdQ" firstAttribute="top" secondItem="V4q-ER-Lkt" secondAttribute="top" id="mEH-n1-98n"/>
+                                                <constraint firstAttribute="trailing" secondItem="uNE-lT-DcO" secondAttribute="trailing" id="tCL-LC-62m"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="154" height="224"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9GC-SV-LdO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0Oq-g9-1Dd"/>
+                            <constraint firstAttribute="bottom" secondItem="Ojx-OL-0WA" secondAttribute="bottom" id="0dq-xM-p3L"/>
+                            <constraint firstAttribute="trailing" secondItem="Ojx-OL-0WA" secondAttribute="trailing" id="V5f-qP-2yF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9GC-SV-LdO" secondAttribute="bottom" id="d7W-sx-JVy"/>
+                            <constraint firstItem="9GC-SV-LdO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="diZ-cb-pQt"/>
+                            <constraint firstItem="Ojx-OL-0WA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="he1-Z3-xnh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9GC-SV-LdO" secondAttribute="trailing" id="kxX-hQ-l8d"/>
+                            <constraint firstItem="Ojx-OL-0WA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wZx-aw-B03"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="94"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back" width="158" height="224"/>
+        <image name="background" width="736" height="414"/>
+        <image name="card1" width="158" height="224"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
